PCHR-222 Fixed modal scrollable area on smaller pages (ie: My details).

--- a/civihr_default_theme/assets/sass/civihr_default/_custom.scss
+++ b/civihr_default_theme/assets/sass/civihr_default/_custom.scss
@@ -1090,6 +1090,7 @@ form {
             -webkit-appearance: none;
             -moz-appearance: none;
             border: 0;
+            background: none;
 
         }
     }
@@ -1393,6 +1394,9 @@ label[for*="edit-absence-start-date-period-filter"] {
             margin: 0;
             padding: 0;
         }
+    }
+    #modalContent {
+        overflow: visible !important;
     }
 }
 
